feat(infra): docker infrastructure with backend + ollama services
Docker Compose orchestrating FastAPI backend and Ollama ROCm inference.
Ollama auto-pulls gpt-oss:20b (LLM) and bge-m3 (embeddings) on first start.
Backend uses multi-stage UV build for minimal image size.
32k context window configured for LightRAG entity extraction.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,16 @@ agent/
 node_modules/
 dist/
 
+# Python
+__pycache__/
+*.pyc
+*.pyo
+.venv/
+*.egg-info/
+
+# Backend data (persisted via Docker volumes)
+backend/data/
+
 # OS
 .DS_Store
 Thumbs.db
