feat(frontend): complete React frontend implementation for LightGraph RAG API
- Add TanStack Query for server state management
- Add TanStack Router for file-based routing
- Add Zustand for client state (theme)
- Add Framer Motion for animations
- Add react-markdown for rendering responses
- Create UI components: Button, Card, Input, Dialog, Select, Badge, etc.
- Create feature components: GroupList, GroupForm, DocumentList, DocumentForm,
  QueryPanel, ConversationList, ConversationPanel, ConversationForm
- Create routes: Dashboard, Groups, Query, Conversations
- Add light/dark theme support with CSS variables
- Add Dockerfile with nginx for production
- Update docker-compose.yml with frontend service
- Update README.md with frontend documentation

--- a/.env.template
+++ b/.env.template
@@ -9,6 +9,9 @@ OLLAMA_KEEP_ALIVE=5m
 
 # === BACKEND CONFIGURATION ===
 BACKEND_PORT=8000
+
+# === FRONTEND CONFIGURATION ===
+FRONTEND_PORT=5173
 OLLAMA_BASE_URL=http://ollama:11434
 LIGHTRAG_CONTEXT_WINDOW=32768
 LIGHTRAG_EMBEDDING_DIM=1024
