feat(readiness): add model-loaded health checks and ollama warmup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
       - OLLAMA_CONTEXT_LENGTH=${OLLAMA_CONTEXT_LENGTH:-32768}
       - OLLAMA_FLASH_ATTENTION=1
       - OLLAMA_KV_CACHE_TYPE=q8_0
-      - OLLAMA_KEEP_ALIVE=${OLLAMA_KEEP_ALIVE:-5m}
+      - OLLAMA_KEEP_ALIVE=${OLLAMA_KEEP_ALIVE:--1}
+      - OLLAMA_WARMUP=${OLLAMA_WARMUP:-true}
       - OLLAMA_NUM_PARALLEL=1
       - OLLAMA_MAX_LOADED_MODELS=2
       - HSA_OVERRIDE_GFX_VERSION=11.5.1
@@ -44,6 +45,12 @@ services:
       - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://ollama:11434}
       - OLLAMA_MODEL=${OLLAMA_MODEL:-gpt-oss:20b}
       - OLLAMA_EMBED_MODEL=${OLLAMA_EMBED_MODEL:-bge-m3:latest}
+      - OLLAMA_KEEP_ALIVE=${OLLAMA_KEEP_ALIVE:--1}
+      - OLLAMA_REQUEST_TIMEOUT_SECONDS=${OLLAMA_REQUEST_TIMEOUT_SECONDS:-900}
+      - OLLAMA_EMBED_TIMEOUT_SECONDS=${OLLAMA_EMBED_TIMEOUT_SECONDS:-300}
+      - OLLAMA_HEALTH_TIMEOUT_SECONDS=${OLLAMA_HEALTH_TIMEOUT_SECONDS:-5}
+      - LLM_TIMEOUT=${LLM_TIMEOUT:-900}
+      - EMBEDDING_TIMEOUT=${EMBEDDING_TIMEOUT:-300}
       - LIGHTRAG_CONTEXT_WINDOW=${LIGHTRAG_CONTEXT_WINDOW:-32768}
       - LIGHTRAG_EMBEDDING_DIM=${LIGHTRAG_EMBEDDING_DIM:-1024}
       - LIGHTRAG_EMBEDDING_MAX_TOKENS=${LIGHTRAG_EMBEDDING_MAX_TOKENS:-8192}
