--- a/.env.template
+++ b/.env.template
@@ -5,7 +5,13 @@ OLLAMA_MODELS_DIR=/home/user/models/ollama
 OLLAMA_MODEL=gpt-oss:20b
 OLLAMA_EMBED_MODEL=bge-m3:latest
 OLLAMA_CONTEXT_LENGTH=32768
-OLLAMA_KEEP_ALIVE=5m
+OLLAMA_KEEP_ALIVE=-1
+OLLAMA_WARMUP=true
+OLLAMA_REQUEST_TIMEOUT_SECONDS=900
+OLLAMA_EMBED_TIMEOUT_SECONDS=300
+OLLAMA_HEALTH_TIMEOUT_SECONDS=5
+LLM_TIMEOUT=900
+EMBEDDING_TIMEOUT=300
 
 # === BACKEND CONFIGURATION ===
 BACKEND_PORT=8000
