--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]",
     "aiosqlite",
+    "httpx",
     "lightrag-hku",
     "sse-starlette",
     "python-multipart",
